# SDR_SCANNER

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  temp_core_option_test.json
.github/workflows/: publish-pypi.yml
libs/: FilePlacementREADME.md
sdr_scanner/: __init__.py  biiiiig.json  core.py  plot3full.json
tests/: test_core.py
